Implemented the first version of the alpha workflow (#18)
